modules/vpc/main.tf
resource "aws_vpc" "primary" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
      Name = "dev-plan-vpc"
    }
}

### Subnets

resource "aws_subnet" "public" {
  vpc_id = aws_vpc.primary.id
  cidr_block = var.public_cidr
  map_public_ip_on_launch = true
  availability_zone = "${var.region}a"
}

resource "aws_subnet" "private-app" {
  vpc_id = aws_vpc.primary.id
  cidr_block = var.private_apps_cidr
  map_public_ip_on_launch = false
  availability_zone = "${var.region}a"
  tags = {
    Name = "dev-plan-private-app-subnet"
    Purpose = "dev plan"
  }
}

resource "aws_subnet" "private-db-a" {
  vpc_id = aws_vpc.primary.id
  cidr_block = var.private_db_cidr
  map_public_ip_on_launch = false
  availability_zone = "${var.region}a"
  tags = {
    Name = "dev-plan-private-db-subnet"
    Purpose = "dev plan"
  }
}

resource "aws_subnet" "private-db-b" {
  vpc_id = aws_vpc.primary.id
  cidr_block = var.private_db_cidr_az2
  map_public_ip_on_launch = false
  availability_zone = "${var.region}b"
  tags = {
    Name = "dev-plan-private-db-subnet-b"
    Purpose = "dev plan"
  }
}

resource "aws_subnet" "public_b" {
  vpc_id = aws_vpc.primary.id
  cidr_block = var.public_subnet_cidr_az2
  map_public_ip_on_launch = true
  availability_zone = "${var.region}b"
  tags = {
    Name = "dev-plan-az-b"
    Purpose = "dev plan"
  }
}

### NAT and IGW's

resource "aws_eip" "igw_eip" {
  depends_on = [ aws_internet_gateway.igw1 ] # In case gateways must exist first
  domain = "vpc"
  tags = {
    Name = "dev-plan-nat-eip"
    Purpose = "dev plan"
  }
}

resource "aws_internet_gateway" "igw1" {
  vpc_id = aws_vpc.primary.id
  tags = {
    Name = "lab-igw"
    Purpose = "dev plan"
  }
}

resource "aws_nat_gateway" "nat_gateway_1" {
  subnet_id = aws_subnet.public.id
  allocation_id = aws_eip.igw_eip.allocation_id
  tags = {
    Name = "lab-nat-gw"
    Purpose = "dev plan"
  }
}


### Route Table Section ####

### Do not use aws_route resources with aws_route_table + route block, this will cause a race condition

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.primary.id

  route {
    cidr_block = "0.0.0.0/0" # full public ingress
    gateway_id = aws_internet_gateway.igw1.id
  }

  tags = {
    Name = "dev-plan-route-table-public"
    Purpose = "dev plan"
  }
}

resource "aws_route_table_association" "public_route" {
  route_table_id = aws_route_table.public.id
  subnet_id = aws_subnet.public.id
}

resource "aws_route_table_association" "public_assoc_b" {
  route_table_id = aws_route_table.public.id
  subnet_id = aws_subnet.public_b.id
}


# allows app subnet to NAT
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.primary.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gateway_1.id
  }

  tags = {
    Name = "dev-plan-route-table-private"
    Purpose = "dev plan"
  }
}

# Connects the private app subnet to the private route table
resource "aws_route_table_association" "private_app_a" {
  route_table_id = aws_route_table.private.id
  subnet_id = aws_subnet.private-app.id
}
